--- a/Project.qmd
+++ b/Project.qmd
@@ -41,77 +41,58 @@ check_pkg("forcats")
 check_pkg("osmdata")
 check_pkg("OpenStreetMap")
 check_pkg("ggmap")
+check_pkg("osmextract")
 check_pkg("sfnetworks")
 ```
 
-# Read data
-Data is in EPSG:31467. I changed it to EPSG:4326.
+# Trajectory data
+## Read data
 ```{r}
-# Read data
+## Read data 
+# Small dataset
 data <- read_delim("data/combined_data.csv", ",") |>
-  st_as_sf(coords = c("latitude", "longitude"), crs = 31467, remove = FALSE) |>
-  st_transform(4326)
-  
+  st_as_sf(coords = c("longitude", "latitude"), crs = 4326, remove = FALSE) 
 
+# Big dataset
 data_1 <- read_delim("data/combined_data_1.csv", ",") |>
-  st_as_sf(coords = c("latitude", "longitude"), crs = 31467, remove = FALSE) |>
-  st_transform(4326)
+  st_as_sf(coords = c("longitude", "latitude"), crs = 4326, remove = FALSE)
 ```
 
-# OSM
 ```{r}
-# Explore features
-available_features()
-available_tags(feature = "highway")
+filter <- filter(data, latitude >= 49.00535930123405, longitude >= 8.36964749052686)
 
-
-# Extract bounding box for Karlsruhe
-karlsruhe_bb <- getbb("Karlsruhe")
+filter2 <- filter(data, latitude < 49.020260402061204, longitude < 8.4230360394263)
 ```
 
-## Create Street Network
+
+
+## Select data within Karlsruhe
 ```{r}
-# Extract streets
-highway <- getbb(place_name = "Karlsruhe") %>%
+# Extract boundary of Karlsruhe
+boundary <- getbb(place_name = "Karlsruhe") %>%
   opq() %>%
-  add_osm_feature(key = "highway") %>%
-  osmdata_sf()
+  add_osm_feature(key = "boundary",
+                  value = "administrative") %>%
+  osmdata_sf() %>%
+  .$osm_multipolygons %>%
+  filter(name == "Karlsruhe")
 
-streets <- highway$osm_lines
-names(streets)
+# Select data that is within this boundary
+filter2 <- st_intersection(filter2, boundary)
 
-
-# Plot with ggplot
+# Plot
 ggplot() +
-  geom_sf(data = streets,
-          inherit.aes = FALSE,
-          color = "black",
-          size = 0.2)
-
-
-# Convert object to sfnetwork object
-# Source: https://geospatial-community.netlify.app/post/2022-03-31-spatial-networks/
-street_net <- as_sfnetwork(streets, directed = FALSE) # set as undirected
-
-street_net
+  geom_sf(data = boundary) +
+  geom_sf(data = data, color = "green") +
+  geom_sf(data = filter2, color = "blue")
 ```
 
-```{r fig.width=50, fig.height=40}
-plot(street_net)
-
-ggplot() +
-  geom_sf(data=street_net %>% activate(edges) %>% st_as_sf(), aes(color=highway), size=2) + 
-  geom_sf(data=street_net %>% activate(nodes) %>% st_as_sf())
-```
-
-## Start and End
-Start:
+## Start and end point of the route
+Start point:
 Kriegsstraße 183, 76135 Karlsruhe, Deutschland
-49.00535930123405, 8.36964749052686
 
-End:
+End point:
 Klosterweg 28, 76131 Karlsruhe, Deutschland
-49.020260402061204, 8.4230360394263
 
 ```{r}
 # Store start point
@@ -123,7 +104,40 @@ end_point <- st_point(c(8.4230360394263, 49.020260402061204)) %>%
   st_sfc(crs = 4326)
 ```
 
-Find nearest vertices
+
+# OSM
+```{r}
+# Explore features
+available_features()
+
+available_tags(feature = "highway")
+```
+
+## Create Street Network
+```{r fig.width=50, fig.height=40}
+# Extract highways
+highway <- getbb(place_name = "Karlsruhe") %>%
+  opq() %>%
+  add_osm_feature(key = "highway") %>%
+  osmdata_sf() %>%
+  .$osm_lines 
+
+# Convert object to sfnetwork object
+street_network <- as_sfnetwork(highway, directed = FALSE) %>% # set as undirected
+  st_intersection(boundary)
+  
+# Overview
+street_network
+
+# Plot
+ggplot() +
+  geom_sf(data = boundary, color = "black", fill = "white") +
+  geom_sf(data = street_network %>% activate(edges) %>% st_as_sf(), aes(color = highway), size = 2) + 
+  geom_sf(data = street_network %>% activate(nodes) %>% st_as_sf()) +
+  theme_minimal()
+```
+
+Find nearest vertices of start and end point of the route
 ```{r}
 # Coordinates of all nodes in the network
 vertices_sf <- street_net %>%
@@ -141,15 +155,58 @@ cat("Start Vertex:", start_vertex, "\n")
 cat("End Vertex:", end_vertex)
 ```
 
+## Trees
+```{r}
+# Extract trees
+trees <- getbb(place_name = "Karlsruhe") %>%
+  opq() %>%
+  add_osm_feature(key = "natural",
+                  value = "tree") %>%
+  osmdata_sf() %>%
+  .$osm_points %>%
+  st_intersection(boundary)
+
+# Plot
+ggplot() +
+  geom_sf(data = boundary, color = "black", fill = "lightblue") +
+  geom_sf(data = trees, color = "darkgreen") +
+  theme_minimal()
+```
+
+## Parks
+```{r}
+# Extract green spaces
+parks <- getbb(place_name = "Karlsruhe") %>%
+  opq() %>%
+  add_osm_feature(key = "leisure",
+                  value = "park") %>%
+  osmdata_sf() %>%
+  .$osm_polygons %>%
+  st_intersection(boundary)
+
+# Plot
+ggplot() +
+  geom_sf(data = boundary, color = "black", fill = "lightblue") +
+  geom_sf(data = parks, color = "darkgreen", fill = "darkgreen") +
+  theme_minimal()
+```
+
 # Mapmatching GPS points to the road network
 https://computationalmovementanalysis.github.io/FS24/Appendix/Appendix.html#mapmatching-gps-points-to-the-road-network
 
 ```{r}
-# Create union of the roads first
-streets <- st_union(streets)
+# Store edges in variable
+edges <- street_net %>% activate(edges) %>% st_as_sf()
+
+# Union
+edges <- st_union(edges)
 
 # Get nearest point for each GPS location
-nearest <- st_nearest_points(data, streets)
+nearest <- st_nearest_points(gps_locations, edges)
+
+# Plot
+ggplot() +
+  geom_sf(data = nearest)
 ```
 
 
@@ -169,7 +226,7 @@ HighWays <- st_union(HighWays)
 gps_locations <- HighWays |> st_buffer(3000) |> st_sample(100)
 
 # Now we can get the nearset point for each GPS location
-nearest <- st_nearest_points(gps_locations, HighWays)
+nearest <- st_nearest_points(data, street_network)
 
 # The output is a line for each point (see plot below)
 # Now we need convert the output from LINE to POINT. 
@@ -185,26 +242,18 @@ near_to <- near_p[c(FALSE,TRUE)]
 
 # Environment
 ```{r}
-# Extract streets
-forestry <- getbb(place_name = "Karlsruhe") %>%
-  opq() %>%
-  add_osm_feature(key = "forestry") %>%
-  osmdata_sf()
-
-
-# Create the plot object, using the osm_lines element
-ggplot() +
-  geom_sf(data = forestry$osm_points,
-          inherit.aes = FALSE,
-          color = "black",
-          size = 0.2)
-
-tmap_mode("view")
-
-tm_shape(forestry$osm_lines) +
-  tm_po(lwd = 0.6, col = "blue")
-
+available_features()
 ```
+
+```{r}
+available_tags("surface")
+```
+
+
+
+
+
+
 
 
 
