--- a/Project.qmd
+++ b/Project.qmd
@@ -47,9 +47,11 @@ check_pkg("osmextract")
 check_pkg("sfnetworks")
 ```
 
-# Trajectory data
+#Trajectory data
 
-## Read data
+##Read data
+
+We have access to two datasets, a small and a large one. As long as there are sufficient routes in the smaller dataset, we will work with this one.
 
 ```{r}
 ## Read data 
@@ -80,24 +82,43 @@ head(data)
 
 ## Select data within Karlsruhe
 
-`{# {r} # # Extract boundary of Karlsruhe # boundary <- getbb(place_name = "Karlsruhe") %>% #   opq() %>% #   add_osm_feature(key = "boundary", #                   value = "administrative") %>% #   osmdata_sf() %>% #   .$osm_multipolygons %>% #   filter(name == "Karlsruhe") #  # # Select data that is within this boundary # data <- st_intersection(data, boundary) #  # # Plot # ggplot() + #   geom_sf(data = boundary) + #   geom_sf(data = data, color = "green") #  # # Save # st_write(boundary, "data/boundary.gpkg") # st_write(data, "data/small_data.gpkg")`
-
-Delete after we are done
+In order to reduce the data set in a first step, we have filtered the data that lies within the border of Karlsruhe.
 
 ```{r}
-boundary <- st_read("data/boundary.gpkg")
-data <- st_read("data/small_data.gpkg")
+# Extract boundary of Karlsruhe
+boundary <- getbb(place_name = "Karlsruhe") %>%
+  opq() %>%
+  add_osm_feature(key = "boundary",
+                  value = "administrative") %>%
+  osmdata_sf() %>%
+  .$osm_multipolygons %>%
+  filter(name == "Karlsruhe")
 
+# Select data that is within this boundary
+data <- st_filter(data, boundary)
+
+# Plot
 ggplot() +
+  geom_sf(data = boundary) +
+  geom_sf(data = data, color = "darkblue")
+```
+
+Occasionally, we encountered issues with a general Overpass server error when attempting to access this data. To address this problem, we stored the boundary data locally on our computers, ensuring continuous access to this data at any time.
+
+```{r}
+#boundary <- st_read("data/boundary.gpkg")
+#data <- st_read("data/small_data.gpkg")
+
+#ggplot() +
   geom_sf(data = boundary) +
   geom_sf(data = data, color = "green")
 ```
 
 ## Start and end point of the route
 
-Start point: Kriegsstraße 183, 76135 Karlsruhe, Deutschland
+The starting point for the outbound routes is Kriegsstraße 183, 76135 Karlsruhe, Germany. The coordinates of this point are stored in the variable home_point.
 
-End point: Klosterweg 28, 76131 Karlsruhe, Deutschland
+The end point for the return routes is Klosterweg 28, 76131 Karlsruhe, Germany. The coordinates of this point are stored in the variable hadiko_point.
 
 ```{r}
 # Store start point
@@ -133,6 +154,7 @@ print(data)
 
 Filter the drives that happened between "home" and "hadiko", separate them into datasets with ways "home to hadiko" and "hadiko to home", visualize.
 ```{r}
+## Create function to filter drives
 filter_drives <- function(start_point, start_distance, end_point, end_distance, data) {
    
     # Create the buffer around the start/end point
@@ -169,7 +191,7 @@ filter_drives <- function(start_point, start_distance, end_point, end_distance, 
       group_by(drive_id) %>%
       slice(n()) %>%
       ungroup()
-    # Visualize the starting/ending points and the start7end buffer as a ring
+    # Visualize the starting/ending points and the start/end buffer as a ring
     plot <- ggplot() +
       geom_sf(data = data_start_end, aes(geometry = geom, colour = drive_id), alpha = 0.5, size = 0.1) +
       geom_sf(data = starting_points, aes(geometry = geom), color = "red", size = 1) +
@@ -184,50 +206,63 @@ filter_drives <- function(start_point, start_distance, end_point, end_distance, 
     return(data_start_end)
     
 }
+## Apply function
+# on drives starting from home
 data_from_home <- filter_drives(home_point, 500, hadiko_point, 500, data)
+# on drives starting from Hadiko
 data_from_hadiko <- filter_drives(hadiko_point, 500, home_point, 500, data)
 
 ```
+To gain a better overview, we created a bounding box around the relevant data points.
+```{r}
+{r}
+## Create bounding box around data
+bbox <- st_bbox(data_from_home) |> 
+  st_as_sfc()
+```
+
+Using group by, we obtained an overview of how many routes there are.
 
 ```{r}
+## Group the data by drive_id
+# Data from Home
+group_data_from_home <- data_from_home %>%
+  group_by(drive_id) %>%
+  summarize(
+    min_timestamp = min(timestamp),
+    max_timestamp = max(timestamp)
+  )
+
+# Print
+print(group_data_from_home)
+
+
+# Data from Hadiko
+group_data_from_hadiko <- data_from_hadiko %>%
+  group_by(drive_id) %>%
+  summarize(
+    min_timestamp = min(timestamp),
+    max_timestamp = max(timestamp)
+  )
+
+# Print
+print(group_data_from_hadiko)
 
 ```
 
-
-
-```{r}
-# Casting points to lines
-data_line <- data |> 
-  # dissolve to a MULTIPOINT
-  summarise(do_union = FALSE) |> 
-  st_cast("LINESTRING")
-
-
-data_points <- st_as_sf(data.frame(geometry = c(start_point, end_point)))
-
-# Summarize to create a LINESTRING from start_point to end_point
-data_line <- data_points %>%
-  summarise(geometry = st_union(geometry)) %>%
-  st_cast("LINESTRING")
-```
-
-```{r}
-
-```
-
-```{r}
-```
 
 # Environmental Features OSM
+To relate the data to the environment, we used OpenStreetMap data. With the two functions below, we obtained an overview of the available data.
 
 ```{r}
-# Explore features
-available_features()
+## Explore features
+#available_features()
 
-available_tags(feature = "highway")
+#available_tags(feature = "highway")
 ```
 
 ## Create Street Network
+By extracting the highways, we created a street network for our bounding box.
 
 ```{r fig.width=50, fig.height=40}
 # Extract highways
@@ -239,111 +274,268 @@ highway <- getbb(place_name = "Karlsruhe") %>%
 
 # Convert object to sfnetwork object
 street_network <- as_sfnetwork(highway, directed = FALSE) %>% # set as undirected
-  st_intersection(boundary)
+  st_intersection(bbox)
   
 # Overview
 street_network
 
 # Plot
 ggplot() +
-  geom_sf(data = boundary, color = "black", fill = "white") +
-  geom_sf(data = street_network %>% activate(edges) %>% st_as_sf(), aes(color = highway), size = 2) + 
+  geom_sf(data = street_network %>% activate(edges) %>% st_as_sf(), aes(color = highway), size = 3) + 
   geom_sf(data = street_network %>% activate(nodes) %>% st_as_sf()) +
-  theme_minimal()
+  theme_void()
 ```
 
-Find nearest vertices of start and end point of the route
+We stored the nearest vertices to the start and endpoint of the routes.
 
 ```{r}
 # Coordinates of all nodes in the network
-vertices_sf <- street_net %>%
+vertices_sf <- street_network %>%
   activate(nodes) %>%
   st_as_sf()
 
 # Find the id of the vertex closest to start point
-start_vertex <- st_nearest_feature(start_point, vertices_sf)
+start_vertex <- st_nearest_feature(home_point, vertices_sf)
 
 # Find the id of the vertex closest to end point
-end_vertex <- st_nearest_feature(end_point, vertices_sf)
+end_vertex <- st_nearest_feature(hadiko_point, vertices_sf)
 
 # Print
 cat("Start Vertex:", start_vertex, "\n")
 cat("End Vertex:", end_vertex)
 ```
 
-## Trees
+## Green Spaces
 
-shift+ctrl+c to add and remove \#
-
-```{r}
-# # Extract trees
-# trees <- getbb(place_name = "Karlsruhe") %>%
-#   opq() %>%
-#   add_osm_feature(key = "natural",
-#                   value = "tree") %>%
-#   osmdata_sf() %>%
-#   .$osm_points %>%
-#   st_intersection(boundary)
-# 
-# # Plot
-# ggplot() +
-#   geom_sf(data = boundary, color = "black", fill = "lightblue") +
-#   geom_sf(data = trees, color = "darkgreen") +
-#   theme_minimal()
-# 
-# st_write(trees, "data/trees.gpkg")
-```
-
-Delete when we are done
+To determine the green spaces in the area, parks and forests were extracted from OSM data. Since OSM polygons and multipolygons provided different data, both were extracted and then merged.
 
 ```{r}
-trees <- st_read("data/trees.gpkg")
-
-# Plot
-ggplot() +
-  geom_sf(data = boundary, color = "black", fill = "lightblue") +
-  geom_sf(data = trees, color = "darkgreen") +
-  theme_minimal()
-```
-
-## Parks
-
-```{r}
-# Extract green spaces
+# Parks
 parks <- getbb(place_name = "Karlsruhe") %>%
   opq() %>%
   add_osm_feature(key = "leisure",
                   value = "park") %>%
   osmdata_sf() %>%
   .$osm_polygons %>%
-  st_intersection(boundary)
+  st_intersection(bbox)
 
-# Plot
-ggplot() +
-  geom_sf(data = boundary, color = "black", fill = "lightblue") +
-  geom_sf(data = parks, color = "darkgreen", fill = "darkgreen") +
-  theme_minimal()
+# Forests Polygons
+forest_polys <- getbb(place_name = "Karlsruhe") %>%
+  opq() %>%
+  add_osm_feature(key = "landuse",
+                  value = "forest") %>%
+  osmdata_sf() %>%
+  .$osm_polygons %>%
+  st_intersection(bbox)
+
+# Forests Multipolygons
+forest_multipolys <- getbb(place_name = "Karlsruhe") %>%
+  opq() %>%
+  add_osm_feature(key = "landuse",
+                  value = "forest") %>%
+  osmdata_sf() %>%
+  .$osm_multipolygons %>%
+  st_make_valid() %>% 
+  st_intersection(bbox)
+
+# Merge
+green_spaces <- bind_rows(parks, forest_polys, forest_multipolys) |> 
+  st_union() |> 
+  st_make_valid()
 ```
 
-# Mapmatching GPS points to the road network
+As the grass polygons mostly intersect with the green space polygons and few data points pass through them, as we can see in the visualization below, we decided not to take this feature into account. We believe the green areas are well covered by the forest and park extractions, so the grass does not need to be considered.
+
+```{r}
+# Trees
+trees <- getbb(place_name = "Karlsruhe") %>%
+  opq() %>%
+  add_osm_feature(key = "natural",
+                  value = "tree") %>%
+  osmdata_sf() %>%
+  .$osm_points %>%
+  st_intersection(bbox)
+
+# Grass
+grass <- getbb(place_name = "Karlsruhe") %>%
+  opq() %>%
+  add_osm_feature(key = "landuse",
+                  value = "grass") %>%
+  osmdata_sf() %>%
+  .$osm_polygons %>%
+  st_intersection(bbox)
+```
+
+## Visualization of OSM Features
+To obtain a good overview of the extracted features, we visualized them.
+
+```{r fig.width=50, fig.height=40}
+# Plot
+ggplot() +
+  
+  # Edges of street network
+    geom_sf(data = street_network %>% activate(edges) %>% st_as_sf(), size = 2, color = "black") +
+
+  # Green Spaces
+  geom_sf(data = forest_multipolys, fill = "lightgreen") +
+  
+  # Trees
+  geom_sf(data = trees, color = "darkgreen", size = 3) +
+  
+  # Grass
+  geom_sf(data = grass, fill = "green") +
+  
+  # Movement data
+  geom_sf(data = data_from_home, color = "steelblue", size = 1) +
+  geom_sf(data = data_from_hadiko, color = "darkred", size = 1) +
+  
+  # Theme
+  theme_void()
+```
+
+##Analysis
+
+#Duration per drive
+```{r}
+## Create function to calculate time per route
+calculate_difftime <- function(data, unit) {
+  data |> 
+    group_by(drive_id) |> 
+    mutate(
+      timelag = as.numeric(difftime(lead(timestamp), timestamp, units = unit))
+    ) |> 
+    summarise(
+      difftime = sum(timelag, na.rm = TRUE)
+    ) |> 
+    mutate(
+      difftime = round(as.numeric(difftime), 1)
+    )
+}
+
+
+## Apply function
+# Data from home
+duration_from_home <- calculate_difftime(data_from_home, "mins")
+
+# Data from Hadiko
+duration_from_hadiko <- calculate_difftime(data_from_hadiko, "mins")
+
+
+## Plot
+boxplot(duration_from_home$difftime, duration_from_hadiko$difftime,
+        main = "Duration per Drive",
+        las = 2,
+        col = c("steelblue4", "darkred"),
+        ylab = "Minutes",
+        xlab = "Startpoint",
+        names = c("Home", "Hadiko")
+        )
+```
+
+##Environment
+Firstly, we filtered the points that have coordinates within the green spaces. Secondly, we calculated the duration of time spent within these green spaces using the function that we had previously created.
+
+```{r}
+## Filter points in green spaces and calculate time spent in them
+# From Home
+green_spaces_from_home <- data_from_home |> 
+  st_filter(green_spaces) |> 
+  calculate_difftime("mins")
+
+# From Hadiko
+green_spaces_from_hadiko <- data_from_hadiko |> 
+  st_filter(green_spaces) |> 
+  calculate_difftime("mins")
+```
+
+We plotted the results to verify their plausibility.
+
+```{r fig.width=10, fig.height=3}
+## Plot for overview
+# Data from home
+ggplot() +
+  geom_sf(data = street_network %>% activate(edges) %>% st_as_sf(), size = 2, color = "lightgrey") +
+  geom_sf(data = green_spaces, color = "darkolivegreen2", fill = "darkolivegreen2") +
+  geom_sf(data = data_from_home, color = "steelblue1", size = 0.4) +
+  geom_sf(data = green_spaces_from_home, color = "steelblue4", size = 0.4) +
+  theme_void() +
+  ggtitle("Drives from Home to Hadiko") +
+  theme(plot.title = element_text(hjust = 0.5)) +
+
+# Data from Hadiko
+ggplot() +
+  geom_sf(data = street_network %>% activate(edges) %>% st_as_sf(), size = 2, color = "lightgrey") +
+  geom_sf(data = green_spaces, color = "darkolivegreen2", fill = "darkolivegreen2") +
+  geom_sf(data = data_from_hadiko, color = "brown1", size = 0.4) +
+  geom_sf(data = green_spaces_from_hadiko, color = "darkred", size = 0.4) +
+  theme_void() +
+  ggtitle("Drives from Hadiko to Home") +
+  theme(plot.title = element_text(hjust = 0.5))
+```
+
+In order to ascertain the proportion of time spent in green areas per drive, the percentage of time spent in green areas per drive was calculated.
+
+```{r}
+## Join it with the overall duration to compare the results
+# From home
+green_spaces_from_home <- green_spaces_from_home |> 
+  st_drop_geometry() |> 
+  left_join(duration_from_home, by = "drive_id", suffix = c(".green_spaces", ".overall")) |> 
+  mutate(
+    percentage_green_space = (difftime.green_spaces / difftime.overall) * 100
+  )
+
+# From Hadiko
+green_spaces_from_hadiko <- green_spaces_from_hadiko |> 
+  st_drop_geometry() |> 
+  left_join(duration_from_hadiko, by = "drive_id", suffix = c(".green_spaces", ".overall")) |> 
+  mutate(
+    percentage_green_space = (difftime.green_spaces / difftime.overall) * 100
+  )
+
+# Print
+print(green_spaces_from_home)
+print(green_spaces_from_hadiko)
+
+# Plot
+boxplot(green_spaces_from_home$percentage_green_space, green_spaces_from_hadiko$percentage_green_space,
+        main = "Percentage of Time Spent in Green Spaces per Drive",
+        las = 2,
+        col = c("steelblue4", "darkred"),
+        ylab = "Percentage",
+        xlab = "Startpoint",
+        names = c("Home", "Hadiko")
+        )
+```
+##Mapmatching GPS points to the road network
 
 https://computationalmovementanalysis.github.io/FS24/Appendix/Appendix.html#mapmatching-gps-points-to-the-road-network
 
 ```{r}
 # Store edges in variable
-edges <- street_net %>% activate(edges) %>% st_as_sf()
+edges <- street_network %>% activate(edges) %>% st_as_sf()
 
 # Union
 edges <- st_union(edges)
 
 # Get nearest point for each GPS location
-nearest <- st_nearest_points(gps_locations, edges)
+nearest <- st_nearest_points(filtered_data, edges)
 
-# Plot
-ggplot() +
-  geom_sf(data = nearest)
+# Convert the output from LINE to POINT
+near_p <- st_cast(nearest, "POINT")
+
+## Uneven numbers are the original points, even numbers are the new, mapmatched points
+# Original points
+near_from <- near_p[c(TRUE, FALSE)]
+mapmatched <- near_p[c(FALSE,TRUE)]
 ```
 
+```{r}
+tm_shape(edges) + tm_lines() +
+  tm_shape(nearest) + tm_lines(lty = 3) +
+  tm_shape(near_from) + tm_dots() +
+  tm_shape(near_to) + tm_dots(col = "red")
+```
 Example:
 
 ```{r}
@@ -373,3 +565,28 @@ near_p <- st_cast(nearest, "POINT")
 near_from <- near_p[c(TRUE, FALSE)]
 near_to <- near_p[c(FALSE,TRUE)]
 ```
+Calculate similarity
+
+```{r}
+bbox <- st_bbox(data_from_home) |> 
+  st_as_sfc()
+
+ggplot() +
+  geom_sf(data = bbox) +
+  geom_sf(data = data_from_home) +
+  geom_sf(data = data_from_hadiko)
+```
+
+```{r}
+# Join data from home with park data from osm
+data_from_home <- st_join(data_from_home, parks)
+
+# Plot
+ggplot() +
+  geom_sf(data = parks, color = "#548B54", fill = "#548B54") +
+  geom_sf(data = data_from_home, color = "black", size = 0.5) +
+  theme_minimal()
+```
+
+
+
